 o easy interface: restore default MAXCONNECTS to 5
 o win32: don't set SO_SNDBUF for windows vista or later versions [20]
 o HTTP: made cookie sort function more deterministic
 o winssl: Fixed memory leak if connection was not successful
 o FTP: wait on both connections during active STOR state [21]
 o connect: treat a failed local bind of an interface as a non-fatal error [22]

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

 Kamil Dudka, Steve Holme, Nick Zitzmann, Patricia Muscalu, Dan Fandrich,
 Gisle Vanem, Guenter Knauf, Yang Tse, Oliver Gondža, Aki Koskinen,
 Alexander Klauer, Kim Vandry, Willem Sparreboom, Jeremy Huddleston,
 Bruno de Carvalho, Rainer Jung, Jeremy Huddleston, Kim Vandry, Jiri Hruska,
 Alexander Klauer, Saran Neti, Alessandro Ghedini, Linus Nielsen Feltzing,
 Martin Jansen, John E. Malmberg, Tom Grace, Patrick Monnerat,
 Zdenek Pavlas, Myk Taylor, Cédric Deltheil, Robert Wruck, Sam Deane,
 Clemens Gruber, Marc Hoersken, Tomas Mlcoch, Fredrik Thulin, Steven Gu,
 Andrew Kurushin, Christian Hägele, Daniel Theron

        Thanks! (and sorry if I forgot to mention someone)

References to bug reports and discussions on issues:

 [1] = http://curl.haxx.se/bug/view.cgi?id=1184
 [2] = http://curl.haxx.se/mail/archive-2013-02/0040.html
 [3] = http://curl.haxx.se/mail/lib-2013-03/0014.html
 [4] = http://curl.haxx.se/bug/view.cgi?id=1192
 [5] = http://curl.haxx.se/mail/lib-2013-02/0145.html
 [6] = http://curl.haxx.se/bug/view.cgi?id=1195
 [7] = http://curl.haxx.se/bug/view.cgi?id=1190
 [8] = http://curl.haxx.se/bug/view.cgi?id=1193
 [9] = http://curl.haxx.se/bug/view.cgi?id=1194
 [10] = http://curl.haxx.se/bug/view.cgi?id=1168
 [11] = http://curl.haxx.se/bug/view.cgi?id=1204
 [12] = https://groups.google.com/d/msg/msysgit/B31LNftR4BI/KhRTz0iuGmUJ